syntax = "proto3";
package game.skills;
option csharp_namespace = "WebServer.Protos";

import "google/protobuf/struct.proto";
 
message SkillsResponse {
  repeated SkillMessage skills = 1; 
  int64 version = 2;
}

message SkillMessage {
  int32 skill_id        = 1;
  string name           = 2;

  SkillTypePb type        = 3;
  int32 element_id      = 4;

  int32 icon_id         = 5;
  bool is_active        = 6;

  SkillTargetingTypePb targeting_type = 7;
  TargetSideTypePb target_side        = 8;
  AoeShapeTypePb aoe_shape            = 9;

  repeated string tags              = 10;

  google.protobuf.Struct base_info  = 11;

  repeated SkillLevelMessage levels = 12;

  bool is_passive       = 13;
  string icon_url       = 14;
}

message SkillLevelMessage {
  int32 skill_id        = 1;
  int32 level           = 2;
  google.protobuf.Struct values     = 3;
  string description     = 4;
  google.protobuf.Struct materials  = 5;
  int32 cost_gold        = 6;
  bool is_passive        = 8;
}

enum SkillTypePb {
  SKILL_TYPE_UNKNOWN = 0;
  SKILL_TYPE_ACTIVE = 1;
  SKILL_TYPE_PASSIVE = 2;
  SKILL_TYPE_ULTIMATE = 3;
}

enum SkillTargetingTypePb {
  TARGETING_UNKNOWN = 0;
  TARGETING_SINGLE = 1;
  TARGETING_AOE = 2;
  TARGETING_SELF = 3;
}

enum TargetSideTypePb {
  TARGET_SIDE_UNKNOWN = 0;
  TARGET_SIDE_ENEMY = 1;
  TARGET_SIDE_ALLY = 2;
  TARGET_SIDE_BOTH = 3;
}

enum AoeShapeTypePb {
  AOE_SHAPE_UNKNOWN = 0;
  AOE_SHAPE_CIRCLE = 1;
  AOE_SHAPE_CONE = 2;
  AOE_SHAPE_LINE = 3;
}